--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -6,7 +6,7 @@ import('helpers/svg-size')
 @import 'helpers/optimize'
 
 @import '../../node_modules/remodal/dist/remodal.css'
-@import '../../node_modules/remodal/dist/remodal-default-theme.css'
+@import 'libs/remodal-default-theme.css'
 @import '../../node_modules/jscrollpane/style/jquery.jscrollpane.css'
 
 @import '../../node_modules/nprogress/nprogress.css'
